--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.7.0",
     "react-chrome-dino": "^0.1.3",
     "react-dom": "^18.2.0",
+    "react-geolocated": "^4.1.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
