--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.0"
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@iconify/react": "^4.1.0",
+    "babel-jest": "^29.6.2",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
