--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start:prod": "set PORT=80 && react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
