--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
